--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>OmniFood</title>
     <link rel="stylesheet" href="app.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper"></div>
+  </body>
 </html>
