--- a/index.html
+++ b/index.html
@@ -3,15 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="css/app.css" />
     <title>OmniFood</title>
-    <link rel="stylesheet" href="app.css" />
   </head>
   <body>
-    <section class="section-hero">
-      <div class="hero-img">
-        <img src="img/hero.png" alt="A girl enjoying her meal" />
-      </div>
-      <div class="hero-description"></div>
-    </section>
+    <header class="header">
+      <img src="img/omnifood-logo.png" alt="omnifood-logo" class="logo" />
+      <nav class="main-nav">Navigation</nav>
+    </header>
+    <main>
+      <section class="section-hero">
+        <div class="hero-container">
+          <div class="hero-description-box">
+            <h1 class="hero-heading">
+              A healthy meal delivered to your door, every single day
+            </h1>
+            <p class="hero-text">
+              The smart 365-days-per-year food subscription that will make you
+              eat healthy again. Tailored to your personal tastes and
+              nutritional needs.
+            </p>
+            <a href="#" class="hero-btn btn--full margin-right-sm"
+              >Start Eating Well</a
+            >
+            <a href="#" class="hero-btn btn--outline">Learn More &darr;</a>
+            <div class="delivered-meals">
+              <div class="delivered-imgs">
+                <img src="img/customers/customer-1.jpg" alt="customer " />
+                <img src="img/customers/customer-2.jpg" alt="customer " />
+                <img src="img/customers/customer-3.jpg" alt="customer " />
+                <img src="img/customers/customer-4.jpg" alt="customer " />
+                <img src="img/customers/customer-5.jpg" alt="customer " />
+                <img src="img/customers/customer-6.jpg" alt="customer " />
+              </div>
+              <p class="delivered-text">
+                <span>250,000+</span> meals delivered last year!
+              </p>
+            </div>
+          </div>
+          <div class="hero-img">
+            <img src="img/hero.png" alt="A girl enjoying her meal" />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
