--- a/index.html
+++ b/index.html
@@ -18,13 +18,21 @@
   <body>
     <header class="header">
       <img src="img/omnifood-logo.png" alt="omnifood-logo" class="logo" />
-      <nav class="main-nav">Navigation</nav>
+      <nav class="main-nav">
+        <ul class="nav-lists">
+          <li><a class="nav-link" href="#">How it works</a></li>
+          <li><a class="nav-link" href="#">Meals</a></li>
+          <li><a class="nav-link" href="#">Testimonial</a></li>
+          <li><a class="nav-link" href="#">Pricing</a></li>
+          <li><a class="nav-link nav-cta" href="#">Try For Free</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <section class="section-hero">
         <div class="hero-container">
           <div class="hero-description-box">
-            <h1 class="hero-heading">
+            <h1 class="hero-heading heading-primary">
               A healthy meal delivered to your door, every single day
             </h1>
             <p class="hero-text">
@@ -52,6 +60,70 @@
           </div>
           <div class="hero-img">
             <img src="img/hero.png" alt="A girl enjoying her meal" />
+          </div>
+        </div>
+      </section>
+
+      <section class="section-how">
+        <div class="container">
+          <h2 class="heading-secondary">
+            <p class="subheading">How it works</p>
+            Your daily dose of health in 3 simple steps
+          </h2>
+        </div>
+        <div class="conatainer grid grid--2-cols">
+          <div class="step-text">
+            <p class="step-no">01</p>
+            <h3 class="heading-tertiary">
+              Tell us what you like(and what not)
+            </h3>
+            <p class="step-decs">
+              Never again waste time thinking about what to eat! Omnifood AI
+              will create a 100% personalized weekly meal plan just for you. It
+              makes sure you get all the nutrients and vitamins you need, no
+              matter what diet you follow!
+            </p>
+          </div>
+          <div class="step-img-box">
+            <img
+              src="img/app/app-screen-1.png"
+              alt="the screen of ios app of Omnifood"
+              class="step-img"
+            />
+          </div>
+          <!-- Step 02 -->
+          <div class="step-img-box">
+            <img
+              src="img/app/app-screen-2.png"
+              alt="meals plans"
+              class="step-img"
+            />
+          </div>
+          <div class="step-text">
+            <p class="step-no">02</p>
+            <h3 class="heading-tertiary">Approve your weekly meal plan</h3>
+            <p class="step-decs">
+              Once per week, approve the meal plan generated for you by Omnifood
+              AI. You can change ingredients, swap entire meals, or even add
+              your own recipes.
+            </p>
+          </div>
+          <!-- Step 03 -->
+          <div class="step-text">
+            <p class="step-no">03</p>
+            <h3 class="heading-tertiary">Receive meals at convenient time</h3>
+            <p class="step-decs">
+              Best chefs in town will cook your selected meal every day, and we
+              will deliver it to your door whenever works best for you. You can
+              change
+            </p>
+          </div>
+          <div class="step-img-box">
+            <img
+              src="img/app/app-screen-3.png"
+              alt="delivery screen"
+              class="step-img"
+            />
           </div>
         </div>
       </section>
