the img box finilized

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
 
+    <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/app.css" />
     <title>OmniFood</title>
   </head>
@@ -66,12 +67,12 @@
 
       <section class="section-how">
         <div class="container">
+          <p class="subheading">How it works</p>
           <h2 class="heading-secondary">
-            <p class="subheading">How it works</p>
             Your daily dose of health in 3 simple steps
           </h2>
         </div>
-        <div class="conatainer grid grid--2-cols">
+        <div class="container grid grid--2-cols grid--center-v">
           <div class="step-text">
             <p class="step-no">01</p>
             <h3 class="heading-tertiary">
