--- a/index.html
+++ b/index.html
@@ -65,6 +65,25 @@
         </div>
       </section>
 
+      <section class="section-fearured">
+        <div class="containe">
+          <h2 class="featured-heading">As featured in</h2>
+          <div class="featured-logos">
+            <img
+              src="img/logos/business-insider.png"
+              alt="business insider logo"
+            />
+            <img src="img/logos/forbes.png" alt="forbes logo" />
+            <img src="img/logos/techcrunch.png" alt="techcrunch logo" />
+            <img
+              src="img/logos/the-new-york-times.png"
+              alt="new york times logo"
+            />
+            <img src="img/logos/usa-today.png" alt="usa today logo" />
+          </div>
+        </div>
+      </section>
+
       <section class="section-how">
         <div class="container">
           <p class="subheading">How it works</p>
