--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
       </section>
 
-      <section class="section-fearured">
+      <section class="section-featured">
         <div class="containe">
           <h2 class="featured-heading">As featured in</h2>
           <div class="featured-logos">
@@ -147,6 +147,51 @@
           </div>
         </div>
       </section>
+      <section class="section-meals">
+        <div class="container">
+          <span class="subheading"> Meals </span>
+          <h2 class="heading-secondary">
+            Omnifood AI chooses from 5,000+ recipes
+          </h2>
+        </div>
+
+        <div class="container grid grid--3-cols">
+          <div class="meal">
+            <img
+              src="img/meals/meal-1.jpg"
+              alt="japanese meal"
+              class="meal-img"
+            />
+            <span class="meal-tag">Vegetarian</span>
+
+            <p class="meal-title">Japanese Gyozas</p>
+            <ul class="meal-features">
+              <li class="meal-feature">
+                <ion-icon name="flame-outline"></ion-icon>
+                <span>650 calories</span>
+              </li>
+              <li class="meal-feature">
+                <ion-icon name="restaurant-outline"></ion-icon>
+                <span>NutriScore &reg; 74</span>
+              </li>
+              <li class="meal-feature">
+                <ion-icon name="star-outline"></ion-icon>
+                <span>4.9 rating (537)</span>
+              </li>
+            </ul>
+          </div>
+          <div class="meal"></div>
+          <div class="diet-list">List of</div>
+        </div>
+      </section>
     </main>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
