--- a/index.html
+++ b/index.html
@@ -162,26 +162,104 @@
               alt="japanese meal"
               class="meal-img"
             />
-            <span class="meal-tag">Vegetarian</span>
+            <div class="tag-box">
+              <div class="meal-tag">
+                <span class="tag tag--vegetarian">Vegetarian</span>
+              </div>
 
-            <p class="meal-title">Japanese Gyozas</p>
-            <ul class="meal-features">
-              <li class="meal-feature">
-                <ion-icon name="flame-outline"></ion-icon>
-                <span>650 calories</span>
+              <p class="meal-title">Japanese Gyozas</p>
+              <ul class="meal-features">
+                <li class="meal-feature">
+                  <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                  <span><strong>650 </strong>calories</span>
+                </li>
+                <li class="meal-feature">
+                  <ion-icon
+                    class="meal-icon"
+                    name="restaurant-outline"
+                  ></ion-icon>
+                  <span>NutriScore &reg; <strong>74</strong></span>
+                </li>
+                <li class="meal-feature">
+                  <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                  <span><strong>4.9</strong> rating (537)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="meal">
+            <img
+              src="img/meals/meal-1.jpg"
+              alt="japanese meal"
+              class="meal-img"
+            />
+            <div class="tag-box">
+              <div class="meal-tag">
+                <span class="tag tag--vegan">Vegan</span>
+
+                <span class="tag tag--paleo">Paleo</span>
+              </div>
+
+              <p class="meal-title">Japanese Gyozas</p>
+              <ul class="meal-features">
+                <li class="meal-feature">
+                  <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                  <span><strong>400 </strong>calories</span>
+                </li>
+                <li class="meal-feature">
+                  <ion-icon
+                    class="meal-icon"
+                    name="restaurant-outline"
+                  ></ion-icon>
+                  <span>NutriScore &reg; <strong>92</strong></span>
+                </li>
+                <li class="meal-feature">
+                  <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                  <span><strong>4.8</strong> rating (441)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="diet-box">
+            <ul class="diet-list">
+              <li class="list-item">
+                <ion-icon name="checkmark" class="list-icon"></ion-icon>
+                <span>Vegetarian</span>
               </li>
-              <li class="meal-feature">
-                <ion-icon name="restaurant-outline"></ion-icon>
-                <span>NutriScore &reg; 74</span>
+              <li class="list-item">
+                <ion-icon name="checkmark" class="list-icon"></ion-icon
+                ><span>Vegan</span>
               </li>
-              <li class="meal-feature">
-                <ion-icon name="star-outline"></ion-icon>
-                <span>4.9 rating (537)</span>
+              <li class="list-item">
+                <ion-icon name="checkmark" class="list-icon"></ion-icon
+                ><span>Pescatarian</span>
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark" class="list-icon"></ion-icon
+                ><span>Gluten-free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark" class="list-icon"></ion-icon
+                ><span>Lactose-free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark" class="list-icon"></ion-icon
+                ><span>Keto</span>
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark" class="list-icon"></ion-icon
+                ><span>Paleo</span>
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark" class="list-icon"></ion-icon
+                ><span>Low FODMAP</span>
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark" class="list-icon"></ion-icon
+                ><span>Kid-friendly</span>
               </li>
             </ul>
           </div>
-          <div class="meal"></div>
-          <div class="diet-list">List of</div>
         </div>
       </section>
     </main>
