--- a/index.html
+++ b/index.html
@@ -220,46 +220,7 @@
               </ul>
             </div>
           </div>
-          <div class="diet-box">
-            <ul class="diet-list">
-              <li class="list-item">
-                <ion-icon name="checkmark" class="list-icon"></ion-icon>
-                <span>Vegetarian</span>
-              </li>
-              <li class="list-item">
-                <ion-icon name="checkmark" class="list-icon"></ion-icon
-                ><span>Vegan</span>
-              </li>
-              <li class="list-item">
-                <ion-icon name="checkmark" class="list-icon"></ion-icon
-                ><span>Pescatarian</span>
-              </li>
-              <li class="list-item">
-                <ion-icon name="checkmark" class="list-icon"></ion-icon
-                ><span>Gluten-free</span>
-              </li>
-              <li class="list-item">
-                <ion-icon name="checkmark" class="list-icon"></ion-icon
-                ><span>Lactose-free</span>
-              </li>
-              <li class="list-item">
-                <ion-icon name="checkmark" class="list-icon"></ion-icon
-                ><span>Keto</span>
-              </li>
-              <li class="list-item">
-                <ion-icon name="checkmark" class="list-icon"></ion-icon
-                ><span>Paleo</span>
-              </li>
-              <li class="list-item">
-                <ion-icon name="checkmark" class="list-icon"></ion-icon
-                ><span>Low FODMAP</span>
-              </li>
-              <li class="list-item">
-                <ion-icon name="checkmark" class="list-icon"></ion-icon
-                ><span>Kid-friendly</span>
-              </li>
-            </ul>
-          </div>
+          <div class="diet-box"></div>
         </div>
       </section>
     </main>
