--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
         </div>
       </section>
       <section class="section-meals">
-        <div class="container">
+        <div class="container center-text">
           <span class="subheading"> Meals </span>
           <h2 class="heading-secondary">
             Omnifood AI chooses from 5,000+ recipes
           </h2>
         </div>
 
-        <div class="container grid grid--3-cols">
+        <div class="container grid grid--3-cols margin-bottom-md">
           <div class="meal">
             <img
               src="img/meals/meal-1.jpg"
@@ -220,7 +220,47 @@
               </ul>
             </div>
           </div>
-          <div class="diet-box"></div>
+          <div class="diet-box">
+            <h3 class="heading-tertiary">Works with any diet:</h3>
+            <ul class="diet-list">
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark"></ion-icon
+                >Vegetarian
+              </li>
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark"></ion-icon>Vegan
+              </li>
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark"></ion-icon
+                >Pescatarian
+              </li>
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark"></ion-icon
+                >Gluten-free
+              </li>
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark"></ion-icon
+                >Lactose-free
+              </li>
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark"></ion-icon>Keto
+              </li>
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark"></ion-icon>Paleo
+              </li>
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark"></ion-icon>Low
+                FODMAP
+              </li>
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark"></ion-icon
+                >Kid-friendly
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="container link-recipes">
+          <a href="" class="link">See all recipes &rarr; </a>
         </div>
       </section>
     </main>
