--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
-            <a href="#" class="hero-btn btn--full margin-right-sm"
+            <a href="#" class="btn btn--full margin-right-sm"
               >Start Eating Well</a
             >
             <a href="#" class="hero-btn btn--outline">Learn More &darr;</a>
@@ -222,38 +222,38 @@
           </div>
           <div class="diet-box">
             <h3 class="heading-tertiary">Works with any diet:</h3>
-            <ul class="diet-list">
+            <ul class="list">
               <li class="list-item">
-                <ion-icon class="diet-icon" name="checkmark"></ion-icon
+                <ion-icon class="list-icon" name="checkmark"></ion-icon
                 >Vegetarian
               </li>
               <li class="list-item">
-                <ion-icon class="diet-icon" name="checkmark"></ion-icon>Vegan
+                <ion-icon class="list-icon" name="checkmark"></ion-icon>Vegan
               </li>
               <li class="list-item">
-                <ion-icon class="diet-icon" name="checkmark"></ion-icon
+                <ion-icon class="list-icon" name="checkmark"></ion-icon
                 >Pescatarian
               </li>
               <li class="list-item">
-                <ion-icon class="diet-icon" name="checkmark"></ion-icon
+                <ion-icon class="list-icon" name="checkmark"></ion-icon
                 >Gluten-free
               </li>
               <li class="list-item">
-                <ion-icon class="diet-icon" name="checkmark"></ion-icon
+                <ion-icon class="list-icon" name="checkmark"></ion-icon
                 >Lactose-free
               </li>
               <li class="list-item">
-                <ion-icon class="diet-icon" name="checkmark"></ion-icon>Keto
+                <ion-icon class="list-icon" name="checkmark"></ion-icon>Keto
               </li>
               <li class="list-item">
-                <ion-icon class="diet-icon" name="checkmark"></ion-icon>Paleo
+                <ion-icon class="list-icon" name="checkmark"></ion-icon>Paleo
               </li>
               <li class="list-item">
-                <ion-icon class="diet-icon" name="checkmark"></ion-icon>Low
+                <ion-icon class="list-icon" name="checkmark"></ion-icon>Low
                 FODMAP
               </li>
               <li class="list-item">
-                <ion-icon class="diet-icon" name="checkmark"></ion-icon
+                <ion-icon class="list-icon" name="checkmark"></ion-icon
                 >Kid-friendly
               </li>
             </ul>
@@ -261,6 +261,213 @@
         </div>
         <div class="container link-recipes">
           <a href="" class="link">See all recipes &rarr; </a>
+        </div>
+      </section>
+
+      <section class="section-testimonials">
+        <div class="testimonials-container">
+          <span class="subheading"> Testimonials </span>
+          <h2 class="heading-secondary">Once you try it,you can't go back</h2>
+
+          <div class="testimonials-box">
+            <figure class="testimonial">
+              <img
+                class="testimonal-img"
+                src="img/customers/dave.jpg"
+                alt="the customer image"
+              />
+              <blockquote class="testimonial-quote">
+                Inexpensive, healthy and great-tasting meals, without even
+                having to order manually! It feels truly magical.
+              </blockquote>
+              <p class="testimonial-name">&mdash;(Dave Bryson)</p>
+            </figure>
+
+            <figure class="testimonial">
+              <img
+                class="testimonal-img"
+                src="img/customers/ben.jpg"
+                alt="the customer image"
+              />
+              <blockquote class="testimonial-quote">
+                The AI algorithm is crazy good, it chooses the right meals for
+                me every time. It's amazing not to worry about food anymore!
+              </blockquote>
+              <p class="testimonial-name">&mdash;(Ben Hadley)</p>
+            </figure>
+
+            <figure class="testimonial">
+              <img
+                class="testimonal-img"
+                src="img/customers/steve.jpg"
+                alt="the customer image"
+              />
+              <blockquote class="testimonial-quote">
+                Omnifood is a life saver! I just started a company, so there's
+                no time for cooking. I couldn't live without my daily meals now!
+              </blockquote>
+              <p class="testimonial-name">&mdash;( Steve Miller)</p>
+            </figure>
+
+            <figure class="testimonial">
+              <img
+                class="testimonal-img"
+                src="img/customers/hannah.jpg"
+                alt="the customer image"
+              />
+              <blockquote class="testimonial-quote">
+                I got Omnifood for the whole family, and it frees up so much
+                time! Plus, everything is organic and vegan and without plastic.
+              </blockquote>
+              <p class="testimonial-name">&mdash;( Hannah Smith)</p>
+            </figure>
+          </div>
+        </div>
+        <div class="testimonial-gallery">
+          <figure class="gallery-item">
+            <img src="img/gallery/gallery-1.jpg" alt="designed meal" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="img/gallery/gallery-2.jpg" alt="designed meal" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="img/gallery/gallery-3.jpg" alt="designed meal" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="img/gallery/gallery-4.jpg" alt="designed meal" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="img/gallery/gallery-5.jpg" alt="designed meal" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="img/gallery/gallery-6.jpg" alt="designed meal" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="img/gallery/gallery-7.jpg" alt="designed meal" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="img/gallery/gallery-8.jpg" alt="designed meal" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="img/gallery/gallery-9.jpg" alt="designed meal" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="img/gallery/gallery-10.jpg" alt="designed meal" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="img/gallery/gallery-11.jpg" alt="designed meal" />
+          </figure>
+          <figure class="gallery-item">
+            <img src="img/gallery/gallery-12.jpg" alt="designed meal" />
+          </figure>
+        </div>
+      </section>
+      <section class="section-pricing">
+        <div class="container">
+          <span class="subheading">Pricing </span>
+          <h2 class="heading-secondary">
+            Eating well without breaking the bank
+          </h2>
+        </div>
+
+        <div class="container grid grid--2-cols margin-bottom-md">
+          <div class="pricing-plan pricing-plan--starter">
+            <div class="plan-header">
+              <p class="plan-name">Starter</p>
+              <p class="plan-price"><span>$</span>399</p>
+              <p class="plan-text">per month.That's just $13 per meal!</p>
+            </div>
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark"></ion-icon>1 meal
+                per day
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark"></ion-icon>Order
+                from 11am to 9pm
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark"></ion-icon>Delivery
+                is free
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="close"></ion-icon>
+              </li>
+            </ul>
+            <div class="plan-signup">
+              <a href="#" class="btn btn--full">Start Eating Well</a>
+            </div>
+          </div>
+          <div class="pricing-plan pricing-plan--complete">
+            <header class="plan-header">
+              <p class="plan-name">Complete</p>
+              <p class="plan-price"><span>$</span>649</p>
+              <p class="plan-text">per month.That's just $11 per meal!</p>
+            </header>
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark"></ion-icon
+                ><span><strong>2 meals</strong> per day</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark"></ion-icon
+                ><span>Order<strong> 24/7</strong></span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark"></ion-icon>Delivery
+                is free
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="close"></ion-icon>Get access
+                to latest recipes
+              </li>
+            </ul>
+            <div class="plan-signup">
+              <a href="#" class="btn btn--full">Start Eating Well</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="container grid">
+          <aside class="plan-detail">
+            Prices include all applicable taxes. You can cancel at any time.Both
+            plans include the following:
+          </aside>
+        </div>
+
+        <div class="container grid grid--4-cols">
+          <div class="feature">
+            <ion-icon class="feature-icon" name="infinite"></ion-icon>
+            <p class="feature-title">Never cook again!</p>
+            <p class="feature-text">
+              Our subscriptions cover 365 days per year, even including major
+              holidays.
+            </p>
+          </div>
+          <div class="feature">
+            <ion-icon class="feature-icon" name="nutrition-outline"></ion-icon>
+            <p class="feature-title">Local and organic</p>
+            <p class="feature-text">
+              Our cooks only use local, fresh, and organic products to prepare
+              your meals.
+            </p>
+          </div>
+          <div class="feature">
+            <ion-icon class="feature-icon" name="leaf-outline"></ion-icon>
+            <p class="feature-title">No waste</p>
+            <p class="feature-text">
+              All our partners only use reusable containers to package all your
+              meals.
+            </p>
+          </div>
+          <div class="feature">
+            <ion-icon class="feature-icon" name="pause"></ion-icon>
+            <p class="feature-title">Pause anytime</p>
+            <p class="feature-text">
+              Going on vacation? Just pause your subscription, and we refund
+              unused days.
+            </p>
+          </div>
         </div>
       </section>
     </main>
