cta img section added

--- a/index.html
+++ b/index.html
@@ -470,6 +470,18 @@
           </div>
         </div>
       </section>
+      <section class="section-cta">
+        <div class="container">
+          <div class="cta">
+            <div class="cta-textbox">textbox</div>
+            <div
+              class="cta-img"
+              role="img"
+              aria-label="A lady eating food"
+            ></div>
+          </div>
+        </div>
+      </section>
     </main>
     <script
       type="module"
