--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   </head>
   <body>
     <header class="header">
-      <img src="img/omnifood-logo.png" alt="omnifood-logo" class="logo" />
+      <a href="#">
+        <img src="img/omnifood-logo.png" alt="omnifood-logo" class="logo" />
+      </a>
       <nav class="main-nav">
         <ul class="nav-lists">
           <li><a class="nav-link" href="#">How it works</a></li>
@@ -527,6 +529,100 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="container grid grid--5-cols grid--footer">
+        <div class="logo-col">
+          <a href="#" class="footer-logo">
+            <img src="img/omnifood-logo.png" alt="omnifood-logo" class="logo" />
+          </a>
+
+          <ul class="social-links">
+            <li>
+              <a class="footer-list" href="#"
+                ><ion-icon name="logo-instagram" class="social-icon"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a class="footer-list" href="#"
+                ><ion-icon name="logo-facebook" class="social-icon"></ion-icon
+              ></a>
+            </li>
+            <li>
+              <a class="footer-list" href="#"
+                ><ion-icon name="logo-twitter" class="social-icon"></ion-icon
+              ></a>
+            </li>
+          </ul>
+
+          <p class="copyright">
+            Copyright &copy; 2024 by Omnifood,Inc.All rights reserved
+          </p>
+        </div>
+        <div class="contact-col">
+          <p class="footer-title">Contact us</p>
+          <address class="contact-detail">
+            <p class="address">
+              623 Harrison St., 2nd Floor, San Francisco, CA 94107
+            </p>
+            <p>
+              <a class="footer-list" href="tell:415-201-6370">415-201-6370</a
+              ><br />
+              <a class="footer-list" href="mailto:info@omnifood.com"
+                >info@omnifood.com</a
+              >
+            </p>
+          </address>
+        </div>
+        <nav class="nav-col">
+          <p class="footer-title">Account</p>
+          <ul class="footer-nav">
+            <li>
+              <a class="footer-list" href="#">Create account</a>
+            </li>
+            <li>
+              <a class="footer-list" href="#">Sign in</a>
+            </li>
+            <li>
+              <a class="footer-list" href="#">IOS app</a>
+            </li>
+            <li>
+              <a class="footer-list" href="#">Android app</a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="nav-col">
+          <p class="footer-title">Company</p>
+          <ul class="footer-nav">
+            <li>
+              <a class="footer-list" href="#">About Omnifood</a>
+            </li>
+            <li>
+              <a class="footer-list" href="#">For Business</a>
+            </li>
+            <li>
+              <a class="footer-list" href="#">Cooking partners</a>
+            </li>
+            <li>
+              <a class="footer-list" href="#">Careers</a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="nav-col">
+          <p class="footer-title">Resources</p>
+          <ul class="footer-nav">
+            <li>
+              <a class="footer-list" href="#">Recipe directory</a>
+            </li>
+            <li>
+              <a class="footer-list" href="#">Help center</a>
+            </li>
+            <li>
+              <a class="footer-list" href="#">Privacy and terms</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
     <script
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
