mobile nav added

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     <title>OmniFood</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header nav-open">
       <a href="#">
         <img src="img/omnifood-logo.png" alt="omnifood-logo" class="logo" />
       </a>
+
       <nav class="main-nav">
         <ul class="nav-lists">
           <li><a class="nav-link" href="#">How it works</a></li>
@@ -31,6 +32,10 @@
           <li><a class="nav-link nav-cta" href="#">Try For Free</a></li>
         </ul>
       </nav>
+      <butoon class="btn-mobile-nav"
+        ><ion-icon class="icon-mobile-nav" name="menu"></ion-icon
+        ><ion-icon class="icon-mobile-nav" name="close"></ion-icon
+      ></butoon>
     </header>
     <main>
       <section class="section-hero">
