--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>OmniFood</title>
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
         <img src="img/omnifood-logo.png" alt="omnifood-logo" class="logo" />
       </a>
