--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="css/queries.css" />
+
+    <script defer src="js/script.js"></script>
     <title>OmniFood</title>
   </head>
   <body>
@@ -561,7 +563,8 @@
           </ul>
 
           <p class="copyright">
-            Copyright &copy; 2024 by Omnifood,Inc.All rights reserved
+            Copyright &copy; <span class="year">2024</span> by Omnifood,Inc.All
+            rights reserved
           </p>
         </div>
         <div class="contact-col">
