--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div class="hero-img">
-            <img src="img/hero.png" alt="A girl enjoying her meal" />
+            <img src="img/hero (1).png" alt="A girl enjoying her meal" />
           </div>
         </div>
       </section>
